small display correction on smallest size

--- a/scss/media_queries/_queries.scss
+++ b/scss/media_queries/_queries.scss
@@ -5,6 +5,9 @@
   .send {
     flex-direction: row;
   }
+  #number-space {
+    margin-bottom: 0;
+  }
 }
 @media screen and (min-width: 462px) {
   .footer-icon a {
@@ -451,5 +454,6 @@
   }
   .contact-form {
     width: 70%;
+    height: 575px;
   }
 }
