--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -107,6 +107,7 @@
   // width: 70%;
   border-radius: 20px;
   margin-bottom: 60px;
+  width: 90vw;
 }
 
 .email-info {
@@ -260,4 +261,8 @@ body {
 
   .js-hidden {
     display: none;
+  }
+
+  #number-space {
+    margin-bottom: 20px;
   }
